# detecting-mutations

./: .gitignore  CMakeLists.txt  Comparator.cpp  Comparator.h  FilesManipulator.cpp  FilesManipulator.h  FilesReader.cpp  FilesReader.h  README.md  SamReader.cpp  SamReader.h  Structures.h  aux.cpp  main.cpp
VariantCalling/: .~lock.lambda_manual.csv#  .~lock.lambda_mutated.csv#  ecoli.fasta.fai  ecoli_sorted.bam.bai  lambda.sam  lambda.vcf  lambda_manual.csv  lambda_ont.mmi  lambda_sorted.bam.bai  lambda_sorted.vcf
